2009-12-27  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python):
	Add python_generate_wrapper_scripts and python_set_active_version
	functions
	(ebuild-mode-keywords-qt4-build): Add qt4-build eclass

2009-12-16  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-ruby-fakegem):
	Add ruby-fakegem eclass
	(ebuild-mode-keywords-ruby-ng): Add ruby-ng eclass
	(ebuild-mode-keywords-git): Add git_submodules function

2009-12-15  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-qt4-r2): Add new
	eclass qt4-r2
	* ebuild-mode-keywords-kde-meta
	* ebuild-mode-keywords-kde-functions: Remove obsolete eclasses for
	KDE 3

2009-12-13  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eutils):
	Add eshopts_push and eshopts_pop functions

2009-12-01  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.16 released.

2009-12-01  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-toolchain-funcs):
	add tc-getPKG_CONFIG and tc-has-tls functions. remove many
	obsolete eclasses: check-kernel, db4-fix, games-etmod,
	games-ut2k4mod, gnustep-funcs, gst-plugins, gtk-sharp-component,
	mozconfig, x11, 64-bit, kernel-mod, php5-sapi-r3, php-ext

2009-11-09  Ulrich Mueller  <ulm@gentoo.org>

	* eselect-mode-keywords.el (eselect-mode-keywords-output):
	Add is_output_mode function.

2009-11-09  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-java-ant-2):
	function java-ant_rewrite-bootclasspath added

2009-10-23  Ulrich Mueller  <ulm@gentoo.org>

	* eselect-mode-keywords.el (eselect-mode-keywords-warn):
	New variable.

	* Makefile (DISTFILES): Omit the Info file from the tarball.
	(gentoo-syntax.info): Use automatic variable.

2009-10-18  Christian Faulhammer  <fauli@gentoo.org>

	* gentoo-syntax.texi (Top): Describe menu items correctly